sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: ')' expected but '<-' found.
while(i <- getNombreValeurs() ) 
        ^AlgBubbleSort1:7: error: illegal start of simple expression
while(i <- getNombreValeurs() ) 
                              ^